Bug 99587 - Linux compile fails in tr_TR.UTF-8 locale ..
Summary: Linux compile fails in tr_TR.UTF-8 locale ..
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
5.1.0.1 rc
Hardware: All All
: medium normal
Assignee: Michael Meeks
URL:
Whiteboard: target:5.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-30 12:15 UTC by Michael Meeks
Modified: 2016-10-25 19:02 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Meeks 2016-04-30 12:15:24 UTC
Interesting:

cd vcl
LANG=tr_TR.UTF-8 S=/data/opt/libreoffice/master && I=$S/instdir && W=$S/workdir &&  mkdir -p $W/SrsPartTarget/vcl/source/src/ && RESPONSEFILE=`mktemp -t gbuild.XXXXXX` && echo "-s -I. -I$S/include  -I/usr/lib64/jvm/java-1.7.0-openjdk/include -I/usr/lib64/jvm/java-1.7.0-openjdk/include/linux -I$S/vcl/inc  -I$S/vcl/source/src/ -DBOOST_ERROR_CODE_HEADER_ONLY -DBOOST_SYSTEM_NO_DEPRECATED -DCPPU_ENV=gcc3 -DDBG_UTIL -DLINUX -DOSL_DEBUG_LEVEL=1 -DSAL_LOG_INFO -DSAL_LOG_WARN -DUNIX -DUNX -DX86_64 -D_DEBUG -D_GLIBCXX_DEBUG -D_PTHREADS -D_REENTRANT -fp=$W/SrsPartTarget/vcl/source/src/app.src $S/vcl/source/src/app.src" > ${RESPONSEFILE} && LD_LIBRARY_PATH=${LD_LIBRARY_PATH:+$LD_LIBRARY_PATH:}"$I/program:$I/program"   $W/LinkTarget/Executable/rsc -presponse @${RESPONSEFILE} && rm -rf ${RESPONSEFILE}
cpp: line 10, Fatal error: Cannot open include file "svids.hrc"
#include "svids.hrc"

Remove the LANG=tr_TR.UTF-8 and life is good ;-) hmm.
Comment 1 Michael Meeks 2016-04-30 12:20:43 UTC
Problem is in rsc:

LANG=C LD_LIBRARY_PATH=/opt/libreoffice/master/instdir/program ../workdir/LinkTarget/Executable/rsc -presponse @/tmp/gbuild.4WcyGX

LANG=tr_TR.UTF-8 LD_LIBRARY_PATH=/opt/libreoffice/master/instdir/program ../workdir/LinkTarget/Executable/rsc -presponse @/tmp/gbuild.4WcyGX
cpp: line 10, Fatal error: Cannot open include file "svids.hrc"
#include "svids.hrc"
Comment 2 Michael Meeks 2016-04-30 13:15:13 UTC
rsc/source/tools/rsctools.cxx-/* case insensitive compare of two strings up to a given length */
rsc/source/tools/rsctools.cxx:int rsc_strnicmp( const char *string1, const char *string2, size_t count )

A rather naive impl. of this - not taking account of turkish 'i's =)

git show 8ab086b6cc054501bfbf7ef6fa509c393691e860 -- rsc/source/tools/rsctools.cxx
...
+|*    rsc_strnicmp()
+|*
+|*    Beschreibung      Vergleicht zwei Strings Case-Unabhaengig bis zu
+|*                      einer bestimmten Laenge
+|*    Ersterstellung    MM 13.02.91
+|*    Letzte Aenderung  MM 13.02.91
+|*
+*************************************************************************/
+int rsc_strnicmp( const char *string1, const char *string2, size_t count )


fun =)
Comment 3 Commit Notification 2016-04-30 17:26:06 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=81d2967bc7be11e7efa40a296fee40210843e5e7

tdf#99587 - make rsc work in tr_TR.UTF-8 locale.

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.