tdf#99587 - make rsc work in tr_TR.UTF-8 locale.

toupper / tolower problematic with exciting Turkish 'i's, bug introduced:
|*    Ersterstellung    MM 13.02.91

Change-Id: Ifa5cfa7cf28cc3948b9206cda426eb1409dd7cc7