rsc/inc/rsctools.hxx
@@ -48,7 +48,6 @@ char * ResponseFile( RscPtrPtr * ppCmd, char ** ppArgv,
 
 void RscExit( sal_uInt32 nExit );
 
-// Ansi-Function Forwards
 int rsc_strnicmp( const char *string1, const char *string2, size_t count );
 int rsc_stricmp( const char *string1, const char *string2 );
 char* rsc_strdup( const char* );
